<resources>
    <string name="app_name">healthcare</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register,</string>
    <string name="Login">Login</string>
    <string name="healthcare_4_you">HealthCare 4 YOU</string>
    <string name="Register">register</string>
    <string name="Email">email</string>
    <string name="Register1">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account_login">Already have an account,login</string>
    <string name="lab_test">LAB TEST</string>
    <string name="buy_medicine">BUY MEDICINE</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_article">HEALTH ARTICLE</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="exit">EXIT</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_doctor">FAMILY DOCTOR</string>
    <string name="family_physician">FAMILY PHYSICIAN</string>
    <string name="DIETICIAN">DIETICIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologist">CARDIOLOGIST</string>
    <string name="exit2">EXIT</string>
    <string name="EXIT">EXIT</string>
    <string name="default_text">Default Text</string>
    <string name="back">BACK</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="contact">Contact</string>
    <string name="fee">Fee</string>
    <string name="fullname">Fullname</string>
    <string name="address">Address</string>
    <string name="appointment">Appointment</string>
    <string name="appointment2">Book Appointment</string>
    <string name="select_date">Select Date</string>
    <string name="Select_date">Select Date</string>
    <string name="_22_12_24">22/12/24</string>
    <string name="select_time">Select Time</string>
    <string name="REGISTER">REGISTER</string>
    <string name="_00_00">00:00</string>
    <string name="book">Book</string>
</resources>